# KnotKB

./: .env.example  .gitignore  Makefile  README.md  docker-compose.hermes.yml  docker-compose.yml
deploy/: install-scheduler.sh  kb-consolidate.sh
deploy/cron/: kb-consolidate.crontab.tmpl
deploy/launchd/: dev.kb.consolidate.plist.tmpl
deploy/systemd/: kb-consolidate.service.tmpl  kb-consolidate.timer
docs/: SETUP.md
docs/reference/: claude-md.snapshot.md  dev.kb.mirror.plist.snapshot  durability.md  kb-consolidate.plist.snapshot  kb-ingest.snapshot.md  registration.md  spec-a-ops.md  spec-b-ops.md  spec-c-ops.md
docs/superpowers/plans/: 2026-06-18-shared-knowledge-base.md  2026-06-20-kb-spec-a-synthesis-rerank-links-consolidation.md  (+3 more)
example/: README.md
example/wiki/: ai-trends.md
kb-mcp/: Dockerfile  docker-entrypoint.sh  pyproject.toml
kb-mcp/kb/: cli.py  config.py  consolidate.py  cursor_llm.py  db.py  dedup.py  discovery.py  embeddings.py  extract.py  ingest.py  links.py  lint.py  markdown.py  models.py  reindex.py  rerank.py  server.py  store.py  synth.py  util.py
kb-mcp/tests/: fakes.py  test_auth.py  test_cli.py  test_config.py  test_consolidate.py  test_cursor_llm.py  test_dedup.py  test_discovery.py  test_extract.py  test_fakes.py  test_ingest.py  test_links.py  test_links_kb.py  test_lint.py  test_markdown.py  test_pgvector_integration.py  test_reindex.py  test_rerank.py  test_rrf.py  test_search.py  test_server_factory.py  test_synth.py  test_util.py  test_write.py
scripts/: mirror-to-drive.sh  smoke-bidirectional.sh  verify-standalone.sh
(+6 files in other folders)
