[project]
name = "kb-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "fastembed>=0.4.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.4",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
cursor = ["cursor-sdk>=0.1.9"]

[project.scripts]
kb = "kb.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kb*"]
